13.小程序数据绑定(二)

--- a/1.小程序/01.课件/01.小程序数据绑定.md
+++ b/1.小程序/01.课件/01.小程序数据绑定.md
@@ -47,10 +47,12 @@
 1. 在模版中读取
    1. Vue
       1. 在template中直接使用{{msg}}(插值语法)进行展示即可
+      2. 需要将状态数据显示为文本内容,就需要使用插值语法
    2. React
       1. 在render函数中,使用{this.state.msg}进行展示即可
    3. 小程序
       1. **在wxml中直接使用{{msg}}(插值语法)进行展示即可**
+      2. **注意:只要想在wxml中使用data中的数据都必须加上插值语法**
 2. 在js中读取
    1. Vue
       1. 语法:this.msg -> 触发数据代理的get方法 -> this.$data.msg -> 触发数据劫持的get方法 -> 将使用闭包缓存的属性值进行返回
@@ -65,8 +67,36 @@
 ## 3.Update(更新)
 
 1. Vue
+   1. 语法:this.msg=123;
+   2. 流程:
+      1. 触发数据代理(this.$data.msg=123)
+      2. 触发数据劫持(defineProperty,set方法触发)
+      3. 触发视图更新(dep.notify)
+   3. **面试题:请问Vue更新数据是同步更新还是异步更新?**
+      1. **同步更新**
+   4. **面试题2:请问Vue更新视图是同步更新还是异步更新?**
+      1. **异步更新(从后台管理系统的编辑模式切换可以体现)**
 2. React
+   1. 语法:this.setState({msg:123});
+   2. 面试题:setState更新数据是同步更新还是异步更新?
+      1. 他有可能是同步,也有可能是异步
+      2. 同步
+         1. 定时器
+         2. 原生DOM事件
+      3. 异步
+         1. 生命周期钩子函数
+         2. 合成事件
+            1. 扩展:如何区分合成事件和原生DOM事件
+               1. 事件名称如果是驼峰命名法,那么就是合成事件
+               2. 原生事件是亲儿子,合成事件是捡来的,其实合成事件用到了事件委托原理实现(所以触发速度会比原生事件更慢)
 3. 小程序
+   1. **语法:this.setData({msg:123})**
+   2. **面试题:请问小程序更新数据是同步更新还是异步更新?**
+      1. **同步更新**
+   3. **面试题2:请问小程序更新视图是同步更新还是异步更新?**
+      1. **异步更新**
+   4. **注意:小程序没有数据代理,也没有数据劫持,总结小程序没有响应式特点**
+4. 总结:无论是Vue,React还是小程序,更新视图一定是异步操作
 
 ## 4.Delete(删除)
 
