15.原生事件机制复习

--- a/1.小程序/01.课件/01.小程序数据绑定.md
+++ b/1.小程序/01.课件/01.小程序数据绑定.md
@@ -76,7 +76,7 @@
       1. **同步更新**
    4. **面试题2:请问Vue更新视图是同步更新还是异步更新?**
       1. **异步更新(从后台管理系统的编辑模式切换可以体现)**
-2. React
+2. React(持久化状态框架)
    1. 语法:this.setState({msg:123});
    2. 面试题:setState更新数据是同步更新还是异步更新?
       1. 他有可能是同步,也有可能是异步
@@ -89,7 +89,7 @@
             1. 扩展:如何区分合成事件和原生DOM事件
                1. 事件名称如果是驼峰命名法,那么就是合成事件
                2. 原生事件是亲儿子,合成事件是捡来的,其实合成事件用到了事件委托原理实现(所以触发速度会比原生事件更慢)
-3. 小程序
+3. 小程序(持久化状态框架)
    1. **语法:this.setData({msg:123})**
    2. **面试题:请问小程序更新数据是同步更新还是异步更新?**
       1. **同步更新**
@@ -101,5 +101,16 @@
 ## 4.Delete(删除)
 
 1. Vue
+   1. Vue.delete或者this.$set来删除对应属性,最终页面会重新渲染展示删除之后的结果
+
+## 5.数据流向
+
+1. Vue
+   1. 单向数据流(伪双向)
+   2. 双向数据绑定v-model
+      1. 将data中的数据作为默认值,展示在input框中
+      2. 当input框内容发生变化时,同步修改data中的状态数据
 2. React
+   1. 单向数据流
 3. 小程序
+   1. 单向数据流
