18.VueRouter路由跳转复习

--- a/1.小程序/01.课件/01.小程序数据绑定.md
+++ b/1.小程序/01.课件/01.小程序数据绑定.md
@@ -93,10 +93,11 @@
    1. **语法:this.setData({msg:123})**
    2. **面试题:请问小程序更新数据是同步更新还是异步更新?**
       1. **同步更新**
+      2. **注意:由于数据是同步更新,所以任何时候读取data中的数据,都一定能够得到当前最新数据**
    3. **面试题2:请问小程序更新视图是同步更新还是异步更新?**
       1. **异步更新**
    4. **注意:小程序没有数据代理,也没有数据劫持,总结小程序没有响应式特点**
-4. 总结:无论是Vue,React还是小程序,更新视图一定是异步操作
+4. 总结:无论是Vue,React还是小程序,更新视图一定是异步操作,类似于对视图更新进行了防抖操作
 
 ## 4.Delete(删除)
 
