--- a/1.小程序/01.课件/03.小程序路由跳转.md
+++ b/1.小程序/01.课件/03.小程序路由跳转.md
@@ -10,8 +10,34 @@
    1. 声明式导航
       1. router-link
       2. 默认生成a标签,当用户点击该标签时,会实现路由的跳转
-      3. 定义:通过标签形式,引导用户进行跳转,就可以成为声明式导航
+      3. **定义:通过标签形式,引导用户进行跳转,就可以成为声明式导航**
    2. 编程式导航
       1. $router对象的API
       2. 开发者可以调用$router身上的push,replace,go,back等方法实现路由的跳转
-      3. 定义:通过js调用API的形式,控制用户进行跳转,就可以成为编程式导航
+      3. **定义:通过js调用API的形式,控制用户进行跳转,就可以成为编程式导航**
+3. 小程序的路由跳转
+   1. 声明式导航
+      1. 组件:navigator
+   2. 编程式导航
+      1. wx.navigateTo(配置对象)
+         1. 用处:保留当前页面(**保留当前页面的实例对象**)，跳转到应用内的某个页面
+         2. url属性可以写相对路径,相对于当前文件所在的目录
+         3. url属性可以写绝对路径,绝对路径参考于当前项目根路径
+         4. **注意:**
+            1. **url中不要输入文件的后缀名,只需要输入文件的名称即可**
+            2. **小程序中页面栈最多十层,旧版最多五层**
+               1. **如果小程序页面栈已经达到十层,此时在使用wx.navigateTo进行跳转,将会失去效果,不会跳转**
+      2. wx.redirectTo(配置对象)
+         1. 用处:关闭当前页面(**销毁当前页面的实例对象**)，跳转到应用内的某个页面
+         2. url属性可以写相对路径,相对于当前文件所在的目录
+         3. url属性可以写绝对路径,绝对路径参考于当前项目根路径
+         4. **因为redirectTo不会影响到页面栈的层数,所以可以放心使用**
+4. **keep-alive(性能优化)**
+   1. **可以将内部本来即将被销毁的组件的实例对象缓存起来,留作下次使用**
+   2. **include标签属性**
+      1. **可以针对某几个组件进行缓存**
+   3. **exclude标签属性**
+      1. **可以针对某几个组件不进行缓存**
+   4. **max标签属性**
+      1. **可以控制最多缓存多少个组件实例对象,因为实例对象也需要占用内存空间,所以需要考虑缓存多少个**
+      2. **如果达到max上限时,在新实例被创建之前,已缓存组件中最久没有被访问的实例会被销毁掉**
