22.小程序生命周期

--- a/1.小程序/01.课件/03.小程序路由跳转.md
+++ b/1.小程序/01.课件/03.小程序路由跳转.md
@@ -20,24 +20,28 @@
       1. 组件:navigator
    2. 编程式导航
       1. wx.navigateTo(配置对象)
-         1. 用处:保留当前页面(**保留当前页面的实例对象**)，跳转到应用内的某个页面
-         2. url属性可以写相对路径,相对于当前文件所在的目录
-         3. url属性可以写绝对路径,绝对路径参考于当前项目根路径
-         4. **注意:**
+         1. **该跳转方式类似于push+keep-alive** 
+         2. 用处:保留当前页面(**保留当前页面的实例对象**)，跳转到应用内的某个页面
+         3. url属性可以写相对路径,相对于当前文件所在的目录
+         4. url属性可以写绝对路径,绝对路径参考于当前项目根路径
+         5. **注意:**
             1. **url中不要输入文件的后缀名,只需要输入文件的名称即可**
-            2. **小程序中页面栈最多十层,旧版最多五层**
+            2. **小程序中页面栈最多十层,旧版最多五层(相当于keep-alive的max属性写为10)**
                1. **如果小程序页面栈已经达到十层,此时在使用wx.navigateTo进行跳转,将会失去效果,不会跳转**
       2. wx.redirectTo(配置对象)
-         1. 用处:关闭当前页面(**销毁当前页面的实例对象**)，跳转到应用内的某个页面
-         2. url属性可以写相对路径,相对于当前文件所在的目录
-         3. url属性可以写绝对路径,绝对路径参考于当前项目根路径
-         4. **因为redirectTo不会影响到页面栈的层数,所以可以放心使用**
+         1. **该跳转方法类似于replace**
+         2. 用处:关闭当前页面(**销毁当前页面的实例对象**)，跳转到应用内的某个页面
+         3. url属性可以写相对路径,相对于当前文件所在的目录
+         4. url属性可以写绝对路径,绝对路径参考于当前项目根路径
+         5. **因为redirectTo不会影响到页面栈的层数,所以可以放心使用**
 4. **keep-alive(性能优化)**
    1. **可以将内部本来即将被销毁的组件的实例对象缓存起来,留作下次使用**
-   2. **include标签属性**
-      1. **可以针对某几个组件进行缓存**
-   3. **exclude标签属性**
-      1. **可以针对某几个组件不进行缓存**
-   4. **max标签属性**
-      1. **可以控制最多缓存多少个组件实例对象,因为实例对象也需要占用内存空间,所以需要考虑缓存多少个**
-      2. **如果达到max上限时,在新实例被创建之前,已缓存组件中最久没有被访问的实例会被销毁掉**
+   2. **被keep-alive缓存的组件生死将不由己,会失去初始化阶段和卸载阶段的生命周期,会被替换成activated(激活)和deactivated(失活)生命周期**
+   3. **标签属性**
+      1. **include标签属性**
+         1. **根据组件名称,可以针对某几个组件进行缓存**
+      2. **exclude标签属性**
+         1. **根据组件名称,可以针对某几个组件不进行缓存**
+      3. **max标签属性**
+         1. **可以控制最多缓存多少个组件实例对象,因为实例对象也需要占用内存空间,所以需要考虑缓存多少个**
+         2. **如果达到max上限时,在新实例被创建之前,已缓存组件中最久没有被访问的实例会被销毁掉**
