23.小程序用户授权

--- a/1.小程序/01.课件/04.小程序生命周期.md
+++ b/1.小程序/01.课件/04.小程序生命周期.md
@@ -25,3 +25,8 @@
          1. 当页面卸载时触发
          2. **当用户使用wx.redirectTo方法离开当前页面时,当前页面会被销毁掉,所以会触发onUnload生命周期**
          3. **当重新显示某个页面时,该页面会执行进入阶段的所有生命周期,重新初始化页面**
+   3. 生命周期图注意点
+      1. **根据官网所示生命周期图,在onLoad和onShow执行之后,才会将默认的data数据发送给视图层进行渲染**
+      2. **实际调试效果是在onLoad中就已经可以看到页面展示的默认数据**
+      3. **最终,个人认为实际调试效果与官网生命周期图不相符,可能是debugger问题,开发依旧以官网的生命周期图为准**
+
