27.硅谷云音乐项目准备说明

--- a/1.小程序/01.课件/04.小程序生命周期.md
+++ b/1.小程序/01.课件/04.小程序生命周期.md
@@ -13,8 +13,11 @@
          3. 小总结:如果有些事情每次进入页面都要执行,就放在onShow里面
       3. onReady
          1. 当页面初次渲染完成时触发
-         2. 类似于Vue的mounted生命周期
-         3. 小总结:如果有些事情在首次渲染组件时都要执行,就放在onReady里面
+         2. 类似于Vue的mounted生命周期(挂载结束)
+         3. **问题:区分挂载和渲染**
+            1. **挂载->将真实DOM插入到html上**
+            2. **渲染->将html上的内容绘制到浏览器上**
+         4. 小总结:如果有些事情在首次渲染组件时都要执行,就放在onReady里面
    2. 离开阶段
       1. onHide
          1. 当页面隐藏时触发
