33.小程序列表渲染

--- a/1.小程序/01.课件/05.小程序数据请求.md
+++ b/1.小程序/01.课件/05.小程序数据请求.md
@@ -3,6 +3,7 @@
 1. 语法:
    1. API:wx.request(配置对象)
    2. 配置对象必传url属性,默认请求方式为GET请求
+   3. url属性必须完整书写,必须写清楚请求的地址,请求的路由
 2. 所需做的配置
    1. **项目准备上线**
       1. **位置:登录微信公众平台->开发->开发管理->开发设置->找到服务器域名配置**
@@ -11,5 +12,15 @@
       1. **位置:微信开发者工具->详情->本地设置->勾选"不校验合法域名"**
       2. **只要勾选该按钮,在开发过程中就不需要担心发送请求域名报错问题**
 3. 注意点:
-   1. **小程序只能跟提前配置好的域名进行通信**
+   1. **小程序必须使用 HTTPS/WSS 发起网络请求**
+   2. **小程序只能跟提前配置好的域名进行通信**
+   3. 网络接口允许与局域网 IP 通信，但要注意 **不允许与本机 IP 通信**
+   4. 默认超时时间和最大超时时间都是 **60s**
+      1. 超时时间可以在 app.json 中通过 networktimeout 配置
+   5. **小程序发送请求的最大并发限制是 10 个,Chrome和FireFox发送请求的最大并发限制为6个**
+      1. 如果发送的请求数量大于最大并发限制,那么前几个请求会发送出,剩余请求会暂停发送,等待前面请求成功响应
+   6. wx.connectSocket 的最大并发限制是 **5 个**
+   7. 小程序进入后台运行后，如果 **5s** 内网络请求没有结束
+   8. **只要成功接收到服务器返回，无论 statusCode 是多少，都会进入 success 回调**
+
 
