36.跨域相关复习(一)

--- a/1.小程序/01.课件/复习/04.跨域相关/跨域相关.md
+++ b/1.小程序/01.课件/复习/04.跨域相关/跨域相关.md
@@ -1,9 +1,64 @@
 # 跨域相关
 
 1. 问题一:什么是跨域
+
+   1. 违反了浏览器的**同源策略**
+
+   2. 问题:什么是同源?
+
+      1. 如果当前网页的url与请求的资源的url相同,那么就成为同源
+
+      2. 官方定义:如果两个 URL 的 **protocol(协议名)**、**port(端口号)**和 **host(域名或者主机IP地址)** 都相同的话，则这两个 URL 是同源
+
+      3. ```js
+         url的组成部分:协议名+域名+端口号+查询字符串
+
+         //例子1:协议名不相同,不同源
+         地址1:http://localhost:3000
+         地址2:ftp://localhost:3000
+
+         //例子2:虽然域名看着不相同,但是最终解析得到的ip都是主机ip地址,所以同源
+         地址1:http://localhost:3000
+         地址2:http://127.0.0.1:3000
+
+         //例子3:虽然查询字符串的路由地址不相同,但是协议名,域名,端口号都相同,查询字符串不在判断是否同源的考虑范围之内,所以同源
+         地址1:http://localhost:3000/getIndex1
+         地址2:http://localhost:3000/getIndex2
+
+         ```
+
 2. 问题二:跨域一定会报错吗
+
+   1. 不一定
+   2. 服务器之间不存在跨域报错
+   3. link/script/video/audio/image等标签都不会出现跨域报错
+   4. 小总结:**跨域是一种行为/动作,他不一定会导致出现跨域问题这个结果**
+
 3. 问题三:什么情况下会出现跨域问题
-4. 问题四:哪些请求算是ajax请求
+
+   1. 只有在浏览器中才存在跨域问题
+   2. 只有发送ajax请求的时候才会出现跨域问题
+   3. 小总结:**跨域问题是浏览器搞的鬼**
+
+4. 问题四:哪些请求算是ajax请求(ajax->async javascript and xml)
+
+   1. ajax请求就是使用js发送的请求
+   2. **ajax请求不是一种特殊的请求类型,ajax只是一种发送http请求的技术**
+   3. 简单说法:发送ajax请求
+   4. 完整说法:使用ajax技术发送一个http请求
+
 5. 跨域解决方案
+
+   1. jsonp
+      1. 原理:使用了script标签发送请求不会报跨域问题的漏洞
+      2. 流程:
+         1. 前端提前准备好一个接受数据的函数
+         2. .通过script标签将前端的接受数据的函数名传给服务器
+         3. 服务器接收到函数名,并将函数名与需要返回给前端的数据进行字符串拼接,生成对应的文本内容
+         4. 服务器将拼接好的文本内容返回给前端,前端的script标签会将返回的文本当作js代码进行解析并执行
+         5. 最终前端用于接收数据的函数会被调用,并得到服务器传入的数据
+   2. cors
+   3. proxy
+   4. nginx
 
 
