39.小程序组件拆分

--- a/1.小程序/01.课件/05.小程序数据请求.md
+++ b/1.小程序/01.课件/05.小程序数据请求.md
@@ -20,7 +20,7 @@
    5. **小程序发送请求的最大并发限制是 10 个,Chrome和FireFox发送请求的最大并发限制为6个**
       1. 如果发送的请求数量大于最大并发限制,那么前几个请求会发送出,剩余请求会暂停发送,等待前面请求成功响应
    6. wx.connectSocket 的最大并发限制是 **5 个**
-   7. 小程序进入后台运行后，如果 **5s** 内网络请求没有结束
+   7. 小程序进入后台运行后，如果 **5s** 内网络请求没有结束,会自动变为失败
    8. **只要成功接收到服务器返回，无论 statusCode 是多少，都会进入 success 回调**
 
 
