--- a/1.小程序/01.课件/06.小程序列表渲染.md
+++ b/1.小程序/01.课件/06.小程序列表渲染.md
@@ -3,12 +3,12 @@
 1. 语法
 
    1. ```html
-       <swiper>    
-       	<swiper-item wx:for="{{banners}}" class="bannerItem">         
-       		<image class="bannerImg" src="/static/images/dazuo.jpeg"></image>    
-       	</swiper-item>
-       </swiper>
-      ```
+       <swiper>    
+        	<swiper-item wx:for="{{banners}}" class="bannerItem">         
+        		<image class="bannerImg" src="/static/images/dazuo.jpeg"></image>    
+        	</swiper-item>
+       </swiper>
+       ```
 
    2. 给需要遍历的节点添加wx:for指令,指令的属性值写上{{需要使用到的data数据}}
 
@@ -29,4 +29,6 @@
       2. **关键字*this**
          1. **如果书写的是*this关键字,小程序会自动将item作为key值使用**
          2. **例如:wx:key="*this" => :key="item"**
+         3. **注意:该语法只适用于item的数据类型为基本数据类型时**
+
 
