--- a/1.小程序/01.课件/复习/04.跨域相关/跨域相关.md
+++ b/1.小程序/01.课件/复习/04.跨域相关/跨域相关.md
@@ -27,6 +27,14 @@
 
          ```
 
+   3. 问题:如果没有同源策略,会怎么样?
+
+      1. 保证用户使用网页的安全性
+      2. 假设url的协议名不在同源策略的考虑范围之内,
+         1. 那么可能导致恶意网站私自读取用户本地文件,盗取用户重要资料
+      3. 假设url的域名不在同源策略的考虑范围之内,真网站简称A,假网站简称B,
+         1. 当用户进入B网站时,B网站使用ajax向A网站发送请求,并自动携带相关的Cookie数据,A网站根据Cookie中的重要数据,返回用户相关的信息,最终该数据被B网站获取到,导致用户以及A网站都收到了损失
+
 2. 问题二:跨域一定会报错吗
 
    1. 不一定
@@ -57,7 +65,10 @@
          3. 服务器接收到函数名,并将函数名与需要返回给前端的数据进行字符串拼接,生成对应的文本内容
          4. 服务器将拼接好的文本内容返回给前端,前端的script标签会将返回的文本当作js代码进行解析并执行
          5. 最终前端用于接收数据的函数会被调用,并得到服务器传入的数据
-   2. cors
+   2. CORS
+      1. 原理:同源策略就是为了保护用户和网站的数据安全性,那么可以关闭这个配置
+      2. 流程:
+         1. 在服务器端设置响应头,添加属性Access-Control-Allow-Origin:"http://www.baidu.com"
    3. proxy
    4. nginx
 
