55.video页面视频列表动态渲染

--- a/1.小程序/01.课件/复习/06.区别cookie,localStorage,sessionStorage.md
+++ b/1.小程序/01.课件/复习/06.区别cookie,localStorage,sessionStorage.md
@@ -58,3 +58,8 @@
       1. 不能实现跨标签页传输
       2. 存储时间较短
       3. 性能较高!!!
+7. 请问token与上述三者有什么区别?
+   1. token是一串数据,他是服务器返回的用户的唯一标识,而上述三者他们不是数据,他们是用于存储数据的手段
+   2. 前端开发中一般会将token存储于上述三者中
+   3. token的本质是字符串
+   4. token是服务器根据用户的唯一标识进行base64等加密手段处理之后得到的结果
