78.小程序分包功能(二)

--- a/1.小程序/01.课件/复习/11.组件懒加载.md
+++ b/1.小程序/01.课件/复习/11.组件懒加载.md
@@ -32,4 +32,10 @@
    1. 优点:经过了组件懒加载之后,之前index.js文件中的许多组件的代码都被切割出来了,**导致index.js文件大小变小,从而导致占用的带宽减少,同时减少解析代码花费的时间,最终导致首页白屏时间减少,提高首页的渲染速度**
    2. 缺点:经过了组件懒加载之后,由于index.js文件中没有其余组件的代码,那么当需要切换组件的时候,**需要重新发送请求获取服务器对应的组件代码,导致页面请求次数增加,从而导致后续页面的展示都会变慢,降低了后续页面的渲染速度**
       1. 其实就是将首页白屏的时间分配到每个页面首次展示去了
-3. ​
+3. 组件预加载
+   1. 由于组件懒加载的缺点,会导致后续页面的首次渲染都要发送请求,获取文件之后才能渲染,所以可以使用组件预加载来解决这个缺点
+   2. 原理:趁用户不注意的时候,偷偷的请求未来可能需要使用的组件代码,将其存放于浏览器的内容中
+      1. 那么当用户跳转对应组件时,会发现代码已经存在于内存中,不需要等待发送请求的时间
+   3. 优缺点:
+      1. 优点:让用户不再需要等待后续页面的请求过程时间,可以快速展示后续其他页面的操作
+      2. 缺点:相比于懒加载之前的index.js,懒加载之后的所有文件总和体积会更大,也就是**会更加耗费流量**
