--- a/3.复习/01.课件/note/02_ES6+.md
+++ b/3.复习/01.课件/note/02_ES6+.md
@@ -36,18 +36,20 @@
 - ***const定义常量, let定义变量***
 - const obj = {}; obj.name="123"(**不会报错**) obj={name:"小明"}(**报错**);
 - ***相对于var***
-  - ***有块作用域***
+  - ***有块作用域(在某个大括号中使用以上关键字声明变量,那么该变量只能在当前大括号内部使用)***
   - ***没有变量提升***
   - ***不会添加到window上***
   - ***不能重复声明***
 
 ### <u>解构赋值</u>
 
-- 解构对象: *const {id, name(必须是对象具有的属性名):name(可以随意修改)} = this.product*
+- 解构对象: *const {id,name(需要得到的属性的名称):name(最后会将属性值存在哪个变量里)} = this.product*
 
   - const id = this.product.id
 
-- 解构数组: *const [count, setCount] = useState()* 
+- 解构数组: const [count, setCount] = useState()
+
+  - const count = arr[0];	=>	const [count] = arr;
 
 - 形参解构: add ({ id, title }) {}
 
@@ -58,40 +60,72 @@
   - 默认暴露
 
     - export default 123
-    - 相当于 export {
-      - default:123
-    - }
+    - 相当于:export {default:123}
+    - 引入: 
+      - import b from '路径'
+      - import {default:b} from '路径'
 
   - 分别暴露
 
-    - export const a = 123;
-    - 相当于export {
-      - a:123
-    - }
-    - 对应的引入语法:
-      - import { a:a } from '@/api'
-      - import * as A from '@/api'
+    - export const a = 666
+    - 相当于:export {a:666}
+    - 引入:
+      - import { a } from '路径'
+      - import * as obj from '路径'
 
-  - 问题:请问一个文件能否同时使用默认暴露和分别暴露?
+  - 注意:无论使用什么暴露语法,一个模块最终一定是暴露出去一个对象
+
+  - 面试题:请问一个模块能否同时使用默认暴露和分别暴露?
 
     - 可以
+    - 相当于:export {default:123,a:666}
+    - 引入语法:import {default:b , a } from '路径'
 
-    - 假设有个文件同时使用分别暴露和默认暴露
+  - 面试题:如何将引入和暴露语法合二为一?
 
-    - ```js
-      export default 123
-      export const a = 234;
-      export const b = 345;
+    - ```javascript
+      // import trademark from "./product/trademark";
+      // import user from './user';
 
-      相当于暴露内容如下
-      export {
-        default:123,
-        a:234,
-        b:345
-      }
+      // export const trademark = trademark;
+      // export const user = user;
+
+      // 此处代码相当于上述1和4的结合体,引入之后直接暴露
+      // export {default as user } from "./user";
+      export {default as trademark} from "./product/trademark";
+      export {default as category} from "./product/category";
+      export {default as attr} from "./product/attr";
+      export {default as spu} from "./product/spu";
+      export {default as sku} from "./product/sku";
+      // this.$API.category.getCategory1()
+
+      /*
+          1.引入所有模块的api
+              import trademark from "./product/trademark";
+              import user from './user';
+
+          2.将引入的api对象分别暴露出去
+              export const trademark = trademark;
+              export const user = user;
+
+          3.最终index.js暴露出去的内容
+              {
+                  trademark:{
+                      getTradeMarkList(){},
+                      addOrUpdate(){},
+                      deleteTradeMark(){}
+                  },
+                  user:{
+                      login(){},
+                      logout(){},
+                      getInfo(){}
+                  }
+              }
+      */
       ```
 
-  - 总结:无论是哪一种暴露语法,最终文件暴露出去的一定是对象
+      ​
+
 
 
 
@@ -112,7 +146,7 @@
   - ***没有自己的this, 使用外部作用域中的this, 不能通过bind来绑定this***
   - ***不能通过new来创建实例对象,并且他没有属于自己的原型对象***
   - ***内部没有arguments, 可以通过rest参数来代替***
-- **形参默认值: *fn (a=2, b={}) {}***
+- ***形参默认值: fn (a=2, b={}) {}***
 - **rest参数: *fn (a, ...args) {} / fn (a, ...args) {}*** 
 
 ### <u>数组的扩展</u>
@@ -133,7 +167,7 @@
     - [...new Set(arr)]
   - Array.of(1, 2, 3): 将一组值，转换为数组
 - 实例方法
-  - find() / findIndex(): 查找匹配的元素或下标
+  - **find() / findIndex(): 查找匹配的元素或下标**
   - arr.flat(): 将多维数组转为一维数组(也称为: 数组扁平化)
 
 ### <u>对象的扩展</u>
