--- a/3.复习/01.课件/note/03_其它.md
+++ b/3.复习/01.课件/note/03_其它.md
@@ -56,8 +56,8 @@ bindEvent2(ul, 'click', (event) => {})
 #### xhr.status
 
 - 2XX: 表示成功处理请求, 如200, 201
-- 3XX: 需要重定向, 浏览器直接跳转, 如302(地址重定向,使用户跳转到另外一个地址),304(使用缓存,相当于将本次请求重定向到用户浏览器内存中)
-- 4XX: 客户端请求错误, 如:  403(禁止访问,服务器有该资源,但是你的权限不够), 404(服务器没有该资源,服务器会将接口当作资源来看待)
+- 3XX: 需要重定向, 浏览器直接跳转, 如302(地址重定向,如果是http请求就会控制用户跳转到某个地址上),304(协商缓存,其实就是检查用户之前是否缓存了当前文件,如果有缓存,就将请求地址重定向到用户的内存中)
+- 4XX: 客户端请求错误, 如:  403, 404(not Found,没有该资源,在服务器上没有该资源)
 - 5XX: 服务器端错误, 如: 500
 
 #### 区别ajax请求与一般HTTP请求
