--- a/3.复习/01.课件/note/03_其它.md
+++ b/3.复习/01.课件/note/03_其它.md
@@ -57,7 +57,7 @@ bindEvent2(ul, 'click', (event) => {})
 
 - 2XX: 表示成功处理请求, 如200, 201
 - 3XX: 需要重定向, 浏览器直接跳转, 如302(地址重定向,如果是http请求就会控制用户跳转到某个地址上),304(协商缓存,其实就是检查用户之前是否缓存了当前文件,如果有缓存,就将请求地址重定向到用户的内存中)
-- 4XX: 客户端请求错误, 如:  403, 404(not Found,没有该资源,在服务器上没有该资源)
+- 4XX: 客户端请求错误, 如:  403(代表服务器具有该资源,但是你权限不够不给你), 404(not Found,没有该资源,在服务器上没有该资源)
 - 5XX: 服务器端错误, 如: 500
 
 #### 区别ajax请求与一般HTTP请求
